fluxcd/apps/base/breezewiki/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: breezewiki
  labels:
    routed-gateway: "true"
